[tool.poetry]
name = "graia-saya"
version = "0.0.15"
description = ""
authors = ["GreyElaina <31543961+GreyElaina@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "graia", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = ">=0.5.3, < 0.7"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

[tool.isort]
profile = "black"

[tool.poetry.extras]
scheduler = ["graia-scheduler"]
broadcast = ["graia-broadcast"]
full = ["graia-scheduler", "graia-broadcast"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
